# irods_project_template_cpp_microservice_plugin

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-irods-centos.yml  build-irods-debian.yml  build-irods-enterprise-linux.yml  build-irods-ubuntu.yml  linter-irods-clang-tidy.yml
packaging/: postinst  run_project_template_cpp_microservice_test.py  test_project_template_cpp_microservice.py
src/: main.cpp
